# yeni-yuvam

./: .env.example  .gitignore  .replit  DATA_SOURCES.md  ERROR_HANDLING.md  GA4_DATALAYER.md  KARACA_DEBUG.md  README.md  SESSION_SUMMARY.md  SUPPORTED_SITES.md  app.py  comprehensive_test.py  debug_karaca.py  debug_scraper.py  ev_esyalari.db  mock_test.py  pyproject.toml  replit.md  replit.nix  requirements.txt  scraper.py  test_results.json  test_scraper.py
templates/: index.html
