[tool.poetry]
name = "yeni-yuva-ev-esyasi"
version = "1.0.0"
description = "Akıllı Ev Eşyası Yönetim Sistemi - Wedding Home Inventory Tracker"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
werkzeug = "^3.0.1"
pillow = "^12.1.0"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
